FIX: Count Badge Positioned Too High for KanboardCSS

--- a/Assets/css/plugin-manager.css
+++ b/Assets/css/plugin-manager.css
@@ -1534,7 +1534,7 @@ td span.refresh-notice {
 }
 
 #PluginSideBar span.count-menu-item {
-    top: 0;
+    top: 3px;
     position: absolute;
     font-size: .75em;
     padding: 0 2px;
